--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -14,7 +14,7 @@ html {
   border-image: linear-gradient(to bottom, rgb(21, 218, 208), rgba(0, 0, 0, 0))
     1 100%;
   @media all and (min-width: 768px) {
-    margin: 200px 80px 80px 80px;
+    margin: 170px 80px 80px 80px;
     border-width: 5px;
   }
   @media all and (min-width: 1366px) {
@@ -23,18 +23,6 @@ html {
   @media all and (min-width: 1920px) {
     margin: 120px 80px 60px 550px;
   }
-  // @media all and (min-width: 1920px) {
-  //   margin: 150px 80px 0 500px;
-  // }
-  // @media all and (min-width: 1200px) {
-  //   margin: 120px 80px 140px 300px;
-  //   border-width: 5px;
-  // }
-  // &__photo {
-  //   width: 100vw;
-  //   margin-top: -48px;
-  //   opacity: 0.65;
-  // }
   &__title {
     display: flex;
     flex-direction: row;
@@ -44,7 +32,7 @@ html {
     margin-top: -20px;
     @media all and (min-width: 768px) {
       padding: 0 0 0 30px;
-      margin-top: -40px;
+      margin-top: -25px;
     }
     @media all and (min-width: 1366px) {
       margin-top: -25px;
@@ -62,6 +50,9 @@ html {
       color: rgb(226, 175, 128);
       text-transform: lowercase;
       padding: 0 5px 19px 0;
+      @media all and (min-width: 768px) {
+        font-size: 45px;
+      }
       @media all and (min-width: 1366px) {
         font-size: 40px;
       }
@@ -75,6 +66,9 @@ html {
       color: rgb(226, 175, 128);
       -webkit-transform: rotate(90deg);
       padding: 0 7px 7px 0;
+      @media all and (min-width: 768px) {
+        font-size: 45px;
+      }
       @media all and (min-width: 1366px) {
         font-size: 40px;
       }
@@ -93,7 +87,7 @@ html {
       padding: 0 0 17px 30px;
       font-size: 25px;
       line-height: 40px;
-      text-align: justify;
+      //text-align: justify;
     }
     @media all and (min-width: 1366px) {
       font-size: 18px;
@@ -107,11 +101,11 @@ html {
     padding: 0 25px 0 15px;
     filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7));
     @media all and (min-width: 768px) {
-      width: 400px;
+      width: 350px;
       padding: 30px 25px 10px 30px;
     }
     @media all and (min-width: 1366px) {
-      width: 350px;
+      //width: 350px;
     }
   }
   &__title-works {
@@ -120,7 +114,7 @@ html {
     color: rgb(21, 218, 208);
     padding: 0 25px 0 15px;
     @media all and (min-width: 768px) {
-      font-size: 40px;
+      font-size: 35px;
       line-height: 55px;
       padding: 0 0 0 30px;
     }
@@ -136,12 +130,12 @@ html {
     padding: 0 40px 0 15px;
     margin-top: 5px;
     @media all and (min-width: 768px) {
-      font-size: 27px;
+      font-size: 23px;
       line-height: 55px;
       padding: 0 0 0 30px;
     }
     @media all and (min-width: 1366px) {
-      font-size: 23px;
+      //font-size: 23px;
       padding: 0 250px 0 30px;
     }
   }
@@ -164,19 +158,17 @@ html {
       transform: scale(1.07);
     }
     @media all and (min-width: 768px) {
-      border-radius: 9px;
-      width: 97px;
-      height: 57px;
-      font-size: 30px;
-      letter-spacing: 3px;
+      border-radius: 7px;
+      width: 77px;
+      height: 47px;
+      font-size: 23px;
+      letter-spacing: 2px;
       margin: 0 12px 45px 30px;
     }
     @media all and (min-width: 1366px) {
-      border-radius: 7px;
       width: 67px;
       height: 37px;
       font-size: 20px;
-      letter-spacing: 2px;
     }
   }
   &__btn-code {
@@ -198,14 +190,13 @@ html {
       transform: scale(1.07);
     }
     @media all and (min-width: 768px) {
-      border-radius: 9px;
-      width: 155px;
-      height: 57px;
-      font-size: 30px;
+      border-radius: 7px;
+      width: 120px;
+      height: 47px;
+      font-size: 23px;
       letter-spacing: 1px;
     }
     @media all and (min-width: 1366px) {
-      border-radius: 7px;
       width: 110px;
       height: 37px;
       font-size: 20px;
@@ -226,10 +217,11 @@ html {
     text-decoration: none;
     list-style-type: none;
     @media all and (min-width: 768px) {
-      font-size: 37px;
+      font-size: 40px;
+      margin-right: 35px;
+      bottom: 165px;
     }
     @media all and (min-width: 1366px) {
-      font-size: 50px;
       margin-right: 260px;
       bottom: 180px;
     }
