--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -7,22 +7,20 @@
   text-align: center;
   color: white;
   padding: 12px;
-  @media all and (min-width: 768px) {
+  @media all and (min-width: 600px) {
     padding: 22px;
     position: absolute;
     bottom: 0;
     width: 100%;
   }
+  // @media all and (min-width: 768px) {
+  //   padding: 22px;
+  //   position: absolute;
+  //   bottom: 0;
+  //   width: 100%;
+  // }
   @media all and (min-width: 1366px) {
     padding: 18px;
-    // position: absolute;
-    // bottom: 0;
-    // width: 100%;
-  }
-  @media all and (min-width: 1920px) {
-    // position: absolute;
-    // bottom: 0;
-    // width: 100%;
   }
   &__wrapper {
     display: flex;
@@ -76,11 +74,6 @@
   @media all and (min-width: 768px) {
     padding: 22px;
   }
-  @media all and (min-width: 1920px) {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
   &__wrapper {
     display: flex;
     flex-direction: row;
@@ -124,9 +117,6 @@
   padding: 12px;
   @media all and (min-width: 768px) {
     padding: 22px;
-  }
-  @media all and (min-width: 1366px) {
-    //padding-top: 300px;
   }
   &__wrapper {
     display: flex;
