--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,18 +1,16 @@
 .page-home {
-  //background-image: linear-gradient(rgb(21, 218, 158), rgb(240, 156, 77));
-  //background-image: linear-gradient(rgb(21, 218, 208), rgb(212, 181, 206) 60%);
   background-image: linear-gradient(rgb(21, 218, 208), rgb(226, 175, 128) 60%);
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
-  // height: 100%;
-  // min-height: 100vh;
 }
 .page__main {
   text-align: center;
-  //padding-top: 120px;
   padding-top: 80px;
   height: 80%;
+  @media all and (min-width: 600px) {
+    padding-top: 124px;
+  }
   @media all and (min-width: 768px) {
     padding-top: 170px;
   }
@@ -28,6 +26,9 @@
   font-size: 30px;
   font-weight: 500;
   color: white;
+  @media all and (min-width: 600px) {
+    font-size: 38px;
+  }
   @media all and (min-width: 768px) {
     font-size: 50px;
   }
@@ -43,6 +44,10 @@
     font-weight: 500;
     color: rgb(153, 151, 149);
     padding-bottom: 50px;
+    @media all and (min-width: 600px) {
+      font-size: 30px;
+      margin-bottom: 70px;
+    }
     @media all and (min-width: 768px) {
       font-size: 38px;
       margin-bottom: 70px;
@@ -61,9 +66,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   text-align: center;
-  @media all and (min-width: 768px) {
-    // font-size: 150px;
-  }
   @media all and (min-width: 1200px) {
     display: flex;
     flex-direction: row;
@@ -74,17 +76,20 @@
     position: relative;
     text-align: center;
     &__down {
-      //font-family: "Times New Roman", Times, serif;
+      font-family: "Times New Roman", Times, serif;
       font-size: 100px;
       color: white;
       -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
       cursor: pointer;
+      @media all and (min-width: 600px) {
+        font-size: 113px;
+      }
       @media all and (min-width: 768px) {
         font-size: 150px;
       }
       @media all and (min-width: 1366px) {
-        font-size: 80px;
+        font-size: 90px;
         margin: 0 80px 0 80px;
       }
       @media all and (min-width: 1920px) {
@@ -131,13 +136,17 @@
           opacity: 1;
         }
       }
+      @media all and (min-width: 600px) {
+        top: -76px;
+        font-size: 113px;
+      }
       @media all and (min-width: 768px) {
         top: -107px;
         font-size: 150px;
       }
       @media all and (min-width: 1366px) {
         top: -70px;
-        font-size: 80px;
+        font-size: 90px;
         margin: 0 80px 0 80px;
       }
       @media all and (min-width: 1920px) {
@@ -154,12 +163,6 @@
       width: 95px;
       top: 15px;
       left: -40px;
-      font-family: "Kiwi Maru", serif;
-      font-size: 15px;
-      color: white;
-      text-transform: uppercase;
-      text-decoration: none;
-      list-style-type: none;
       animation-name: showText;
       animation-duration: 2s;
       animation-iteration-count: 2s;
@@ -190,13 +193,16 @@
           opacity: 1;
         }
       }
+      @media all and (min-width: 600px) {
+        top: 12px;
+        left: -43px;
+      }
       @media all and (min-width: 768px) {
         left: -60px;
-        font-size: 20px;
         width: 142px;
       }
       @media all and (min-width: 1366px) {
-        top: -5px;
+        top: 4px;
         left: 14px;
       }
       @media all and (min-width: 1920px) {
@@ -204,9 +210,17 @@
         left: 29px;
       }
       &--link {
-        // text-align: center;
+        font-family: "Kiwi Maru", serif;
+        font-size: 15px;
+        color: white;
+        text-transform: uppercase;
+        text-decoration: none;
+        list-style-type: none;
+        @media all and (min-width: 600px) {
+          font-size: 17px;
+        }
         @media all and (min-width: 768px) {
-          //margin: 0 0 5px 6px;
+          font-size: 22px;
         }
         @media all and (min-width: 1366px) {
           font-size: 14px;
@@ -292,6 +306,9 @@
   margin-top: -18px;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
+  @media all and (min-width: 600px) {
+    font-size: 40px;
+  }
   @media all and (min-width: 768px) {
     font-size: 50px;
   }
@@ -315,6 +332,9 @@
     -moz-transform: rotate(90deg);
     display: inline-block;
     cursor: pointer;
+    @media all and (min-width: 600px) {
+      font-size: 125px;
+    }
     @media all and (min-width: 768px) {
       font-size: 150px;
       margin-left: 7px;
@@ -367,11 +387,16 @@
           opacity: 1;
         }
       }
+      @media all and (min-width: 600px) {
+        font-size: 18px;
+        left: -12px;
+      }
       @media all and (min-width: 768px) {
-         //top: 20px;
+        font-size: 21px;
       }
       @media all and (min-width: 1366px) {
-        //top: -10px;
+        left: -6px;
+        top: 9px;
       }
       @media all and (min-width: 1920px) {
         top: 10px;
