--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -7,6 +7,15 @@
   background-color: rgb(253, 250, 250);
   background-size: 100%;
   background-repeat: no-repeat;
+  @media all and (min-width: 600px) {
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.4),
+        rgba(255, 255, 255, 0.4)
+      ),
+      url("../images/nat-about-max.png");
+    background-color: rgb(253, 250, 250);
+    background-size: 75%;
+  }
   @media all and (min-width: 768px) {
     background-image: linear-gradient(
         rgba(255, 255, 255, 0.4),
@@ -14,7 +23,7 @@
       ),
       url("../images/nat-about-max.png");
     background-color: rgb(253, 250, 250);
-    background-size: 60%;
+    background-size: 70%;
   }
   @media all and (min-width: 1200px) {
     background-image: linear-gradient(
@@ -33,12 +42,15 @@
   border-right: 0;
   border-image: linear-gradient(to bottom, rgb(21, 218, 208), rgba(0, 0, 0, 0))
     1 100%;
+  @media all and (min-width: 600px) {
+    margin: 480px 70px 80px 50px;
+    border-width: 5px;
+  }
   @media all and (min-width: 768px) {
     margin: 550px 80px 80px 80px;
     border-width: 5px;
   }
   @media all and (min-width: 1366px) {
-    // margin: 100px 80px 240px 500px;
     margin: 120px 80px 60px 450px;
   }
   @media all and (min-width: 1920px) {
@@ -51,6 +63,9 @@
     align-items: center;
     padding: 0 0 0 13px;
     margin-top: -20px;
+    @media all and (min-width: 600px) {
+      padding: 0 0 0 18px;
+    }
     @media all and (min-width: 768px) {
       padding: 0 0 0 30px;
       margin-top: -40px;
@@ -71,9 +86,7 @@
         font-size: 45px;
       }
       @media all and (min-width: 1366px) {
-        font-size: 40px;
-      }
-      @media all and (min-width: 1920px) {
+        font-size: 50px;
       }
     }
     &--icon {
@@ -83,13 +96,8 @@
       color: rgb(21, 218, 208);
       -webkit-transform: rotate(90deg);
       padding: 0 7px 7px 0;
-      @media all and (min-width: 768px) {
-        font-size: 45px;
-      }
       @media all and (min-width: 1366px) {
-        font-size: 40px;
-      }
-      @media all and (min-width: 1920px) {
+        font-size: 50px;
       }
     }
   }
@@ -112,6 +120,9 @@
     cursor: pointer;
     &:hover {
       transform: scale(1.07);
+    }
+    @media all and (min-width: 600px) {
+      margin: 0 0 16px 18px;
     }
     @media all and (min-width: 768px) {
       width: 130px;
@@ -136,10 +147,12 @@
       color: rgb(21, 218, 208);
       font-weight: 600;
     }
+    @media all and (min-width: 600px) {
+      padding: 0 0 0 18px;
+    }
     @media all and (min-width: 768px) {
-      font-size: 25px;
-      line-height: 40px;
-      //text-align: justify;
+      font-size: 20px;
+      line-height: 35px;
       padding: 0 0 0 30px;
     }
     @media all and (min-width: 1366px) {
@@ -149,6 +162,85 @@
       padding: 0 150px 0 30px;
     }
     @media all and (min-width: 1920px) {
+    }
+  }
+  &__stack {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: rgb(226, 175, 128);
+    padding: 15px 5px 8px 13px;
+    @media all and (min-width: 600px) {
+      font-size: 22px;
+      padding: 20px 0 16px 18px;
+    }
+    @media all and (min-width: 768px) {
+      padding: 20px 0 16px 30px;
+    }
+    &--text {
+      font-family: "Open Sans", sans-serif;
+      font-size: 15px;
+      color: grey;
+      padding: 0 45px 8px 13px;
+      line-height: 20px;
+      list-style-type: square;
+      list-style-position: inside;
+      @media all and (min-width: 600px) {
+        font-size: 18px;
+        padding: 2px 0 16px 18px;
+      }
+      @media all and (min-width: 768px) {
+        font-size: 18px;
+        padding: 2px 0 16px 30px;
+      }
+    }
+  }
+  &__hard {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: rgb(226, 175, 128);
+    padding: 15px 5px 8px 13px;
+    @media all and (min-width: 600px) {
+      font-size: 22px;
+      padding: 20px 0 16px 18px;
+    }
+    @media all and (min-width: 768px) {
+      padding: 20px 0 16px 30px;
+    }
+    &--icons {
+      font-size: 60px;
+      padding: 0 20px 50px 13px;
+      align-content: center;
+      @media all and (min-width: 600px) {
+        padding: 0 0 16px 18px;
+      }
+      @media all and (min-width: 768px) {
+        padding: 0 0 16px 30px;
+      }
+    }
+  }
+  &__soft {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: rgb(226, 175, 128);
+    padding: 15px 5px 8px 13px;
+    @media all and (min-width: 600px) {
+      padding: 20px 0 16px 18px;
+    }
+    @media all and (min-width: 768px) {
+      font-size: 22px;
+      padding: 20px 0 16px 30px;
+    }
+    &--text {
+      font-family: "Open Sans", sans-serif;
+      font-size: 15px;
+      color: grey;
+      padding: 0 45px 8px 13px;
+      line-height: 20px;
+      list-style-type: square;
+      list-style-position: inside;
+      @media all and (min-width: 600px) {
+        padding: 2px 0 16px 18px;
+      }
     }
   }
   &__arrow {
@@ -177,4 +269,31 @@
       display: none;
     }
   }
+}
+.fa-html5 {
+  color: rgb(255, 0, 0);
+}
+.fa-css3-alt {
+  color: rgb(24, 117, 238);
+}
+.fa-sass {
+  color: rgb(238, 24, 113);
+}
+.fa-gulp {
+  color: rgb(212, 34, 72);
+}
+.fa-js-square {
+  color: rgb(251, 255, 0);
+}
+.fa-react {
+  color: rgb(0, 255, 242);
+}
+.fa-bootstrap {
+  color: rgb(76, 0, 255);
+}
+.fa-node {
+  color: rgb(54, 216, 39);
+}
+.fa-git-alt {
+  color: rgb(255, 123, 0);
 }
