Add links in logo, images and titles projects

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,10 +1,10 @@
 <header class="header" id="arrow">
-  <img
+  <a href="./index.html"><img
     class="header__logo"
     src="./assets/images/favicon-nat-beige.png"
     alt="Logo Natalia Migallón"
-  />
-  <h1 class="header__title">Natalia Migallón</h1>
+  /></a>
+  <a href="./index.html"><h1 class="header__title">Natalia Migallón</h1></a>
   <div class="hamburger">
     <div class="_layer -top"></div>
     <div class="_layer -mid"></div>
