--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -399,6 +399,7 @@
         top: 9px;
       }
       @media all and (min-width: 1920px) {
+        left: -12px;
         top: 10px;
       }
       &--link {
