--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -102,7 +102,7 @@
     }
   }
   &__cv {
-    width: 100px;
+    width: 110px;
     height: 38px;
     background-color: rgb(226, 175, 128);
     border-radius: 8px;
@@ -127,11 +127,11 @@
     @media all and (min-width: 768px) {
       width: 130px;
       height: 50px;
-      font-size: 23px;
+      font-size: 20px;
       margin: 0 0 15px 30px;
     }
     @media all and (min-width: 1366px) {
-      width: 110px;
+      width: 120px;
       height: 35px;
       font-size: 17px;
       margin: 0 0 10px 30px;
@@ -165,32 +165,44 @@
     }
   }
   &__stack {
-    font-family: "Kiwi Maru", serif;
-    font-size: 20px;
-    color: rgb(226, 175, 128);
-    padding: 15px 5px 8px 13px;
-    @media all and (min-width: 600px) {
-      font-size: 22px;
-      padding: 20px 0 16px 18px;
-    }
-    @media all and (min-width: 768px) {
-      padding: 20px 0 16px 30px;
-    }
-    &--text {
-      font-family: "Open Sans", sans-serif;
-      font-size: 15px;
-      color: grey;
-      padding: 0 45px 8px 13px;
-      line-height: 20px;
-      list-style-type: square;
-      list-style-position: inside;
+    display: grid;
+    grid-template-columns: 1fr, 1fr, 1fr;
+    grid-template-rows: 1fr, 1fr;
+    &--title {
+      font-family: "Kiwi Maru", serif;
+      font-size: 20px;
+      text-transform: uppercase;
+      color: rgb(226, 175, 128);
+      padding: 15px 5px 8px 13px;
       @media all and (min-width: 600px) {
-        font-size: 18px;
-        padding: 2px 0 16px 18px;
+        font-size: 22px;
+        padding: 20px 0 16px 18px;
       }
       @media all and (min-width: 768px) {
-        font-size: 18px;
-        padding: 2px 0 16px 30px;
+        padding: 20px 0 16px 30px;
+      }
+      // &--table{
+      //   text-align: center;
+      // }
+      // &--title {
+      //   padding: 10px 0 10px 0;
+      // }
+      &--text {
+        font-family: "Open Sans", sans-serif;
+        font-size: 15px;
+        color: grey;
+        // padding: 0 45px 8px 13px;
+        // line-height: 20px;
+        // list-style-type: square;
+        // list-style-position: inside;
+        @media all and (min-width: 600px) {
+          font-size: 18px;
+          // padding: 2px 0 16px 18px;
+        }
+        @media all and (min-width: 768px) {
+          font-size: 18px;
+          // padding: 2px 0 16px 30px;
+        }
       }
     }
   }
@@ -296,4 +308,8 @@
 }
 .fa-git-alt {
   color: rgb(255, 123, 0);
+}
+.about__wrapper {
+  display: flex;
+  flex-direction: row;
 }
