--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,12 @@
-@import "core/variables";
-@import "core/reset";
-@import "components/code";
-@import "components/links";
-@import "layout/page";
-@import "layout/header";
-@import "layout/footer";
-@import "pages/index";
-@import "pages/about";
-@import "pages/projects";
-@import "pages/contact";
+@import 'core/variables';
+@import 'core/fonts';
+@import 'core/reset';
+@import 'components/code';
+@import 'components/links';
+@import 'layout/page';
+@import 'layout/header';
+@import 'layout/footer';
+@import 'pages/index';
+@import 'pages/about';
+@import 'pages/projects';
+@import 'pages/contact';
