--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -46,18 +46,19 @@
     padding-bottom: 50px;
     @media all and (min-width: 600px) {
       font-size: 30px;
-      margin-bottom: 70px;
+      margin-bottom: 40px;
     }
     @media all and (min-width: 768px) {
       font-size: 38px;
-      margin-bottom: 70px;
+      margin-bottom: 40px;
     }
     @media all and (min-width: 1366px) {
       font-size: 28px;
-      padding-bottom: 22px;
+      margin-bottom: 22px;
     }
     @media all and (min-width: 1920px) {
       font-size: 35px;
+      margin-bottom: 60px;
     }
   }
 }
@@ -76,9 +77,10 @@
     position: relative;
     text-align: center;
     &__down {
-      font-family: "Times New Roman", Times, serif;
-      font-size: 100px;
+      font-family: "Crimson Text", serif;
+      font-size: 92px;
       color: white;
+      margin: 0 10px 0 10px;
       -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
       cursor: pointer;
@@ -87,21 +89,23 @@
       }
       @media all and (min-width: 768px) {
         font-size: 150px;
+        margin: 0 -5px 0 -5px;
       }
       @media all and (min-width: 1366px) {
-        font-size: 90px;
-        margin: 0 80px 0 80px;
+        font-size: 100px;
+        margin: 0 70px 0 70px;
       }
       @media all and (min-width: 1920px) {
-        font-size: 110px;
+        font-size: 130px;
         margin: 0 90px 0 90px;
       }
     }
     &__up {
       position: absolute;
       top: -60px;
-      //font-family: "Times New Roman", Times, serif;
-      font-size: 100px;
+      font-family: "Crimson Text", serif;
+      font-size: 92px;
+      margin: 0 10px 0 10px;
       color: white;
       -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
@@ -143,15 +147,16 @@
       @media all and (min-width: 768px) {
         top: -107px;
         font-size: 150px;
+        margin: 0 -5px 0 -5px;
       }
       @media all and (min-width: 1366px) {
         top: -70px;
-        font-size: 90px;
-        margin: 0 80px 0 80px;
+        font-size: 100px;
+        margin: 0 70px 0 70px;
       }
       @media all and (min-width: 1920px) {
         top: -100px;
-        font-size: 110px;
+        font-size: 130px;
         margin: 0 90px 0 90px;
       }
     }
@@ -161,8 +166,8 @@
       position: absolute;
       text-align: center;
       width: 95px;
-      top: 15px;
-      left: -40px;
+      top: 20px;
+      left: -28px;
       animation-name: showText;
       animation-duration: 2s;
       animation-iteration-count: 2s;
@@ -194,20 +199,21 @@
         }
       }
       @media all and (min-width: 600px) {
-        top: 12px;
-        left: -43px;
+        top: 24px;
+        left: -39px;
       }
       @media all and (min-width: 768px) {
-        left: -60px;
+        top: 28px;
+        left: -59px;
         width: 142px;
       }
       @media all and (min-width: 1366px) {
-        top: 4px;
-        left: 14px;
+        top: 21px;
+        left: 11px;
       }
       @media all and (min-width: 1920px) {
-        top: 0;
-        left: 29px;
+        top: 23px;
+        left: 32px;
       }
       &--link {
         font-family: "Kiwi Maru", serif;
@@ -220,7 +226,7 @@
           font-size: 17px;
         }
         @media all and (min-width: 768px) {
-          font-size: 22px;
+          font-size: 21px;
         }
         @media all and (min-width: 1366px) {
           font-size: 14px;
@@ -337,9 +343,24 @@
 .mouth-section {
   position: relative;
   text-align: center;
+  top: -17px;
+  left: -5px;
+  @media all and (min-width: 600px) {
+    //font-size: 125px;
+  }
+  @media all and (min-width: 768px) {
+    //margin-left: 7px;
+  }
+  @media all and (min-width: 1366px) {
+    //font-size: 106px;
+  }
+  @media all and (min-width: 1920px) {
+    top: -50px;
+    left: -10px;
+  }
   .mouth {
-    //font-family: "Times New Roman", Times, serif;
-    font-size: 100px;
+    font-family: "Crimson Text", serif;
+    font-size: 110px;
     color: white;
     //top: 20px;
     -webkit-transform: rotate(90deg);
@@ -350,11 +371,11 @@
       font-size: 125px;
     }
     @media all and (min-width: 768px) {
-      font-size: 150px;
+      font-size: 165px;
       margin-left: 7px;
     }
     @media all and (min-width: 1366px) {
-      font-size: 106px;
+      font-size: 115px;
     }
     @media all and (min-width: 1920px) {
       font-size: 150px;
@@ -367,8 +388,8 @@
       position: absolute;
       text-align: center;
       width: 100%;
-      left: -9px;
-      top: 15px;
+      left: -6px;
+      top: 33px;
       text-decoration: none;
       list-style-type: none;
       animation-name: showText;
@@ -402,23 +423,27 @@
         }
       }
       @media all and (min-width: 600px) {
-        font-size: 18px;
-        left: -12px;
+        left: -6px;
+        top: 36px;
       }
       @media all and (min-width: 768px) {
-        font-size: 21px;
+        left: -4px;
+        top: 54px;
       }
       @media all and (min-width: 1366px) {
-        left: -6px;
-        top: 9px;
+        left: -3px;
+        top: 27px;
       }
       @media all and (min-width: 1920px) {
-        left: -12px;
-        top: 10px;
+        left: -2px;
+        top: 42px;
       }
       &--link {
+        @media all and (min-width: 600px) {
+          font-size: 17px;
+        }
         @media all and (min-width: 768px) {
-          font-size: 20px;
+          font-size: 21px;
         }
         @media all and (min-width: 1366px) {
           font-size: 14px;
