--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,5 +1,7 @@
 // fonts
-$font-main: 'Roboto', sans-serif;
+$font-main: "Roboto", sans-serif;
+$font-titles-home: "Kiwi Maru", serif;
+$font-footer: "Kiwi Maru", serif;
 
 // colors
 $color-bg: #f3f4f5;
