--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -211,6 +211,10 @@
       @media all and (min-width: 600px) {
         padding: 2px 0 16px 18px;
       }
+      @media all and (min-width: 768px) {
+        font-size: 20px;
+        padding: 20px 0 16px 30px;
+      }
     }
   }
   &__arrow {
@@ -226,6 +230,10 @@
     margin-right: 20px;
     text-decoration: none;
     list-style-type: none;
+    &:hover {
+      transform: scale(1.07);
+      color: rgb(226, 175, 128);
+    }
     @media all and (min-width: 768px) {
       font-size: 40px;
       margin-right: 35px;
@@ -246,7 +254,7 @@
     font-size: 20px;
     text-transform: uppercase;
     color: rgb(226, 175, 128);
-    padding: 15px 5px 8px 13px;
+    padding: 10px 5px 8px 13px;
     @media all and (min-width: 600px) {
       font-size: 22px;
       padding: 20px 0 16px 18px;
@@ -254,35 +262,127 @@
     @media all and (min-width: 768px) {
       padding: 20px 0 16px 30px;
     }
+    @media all and (min-width: 1366px) {
+    }
+    @media all and (min-width: 1920px) {
+      padding-top: 30px;
+    }
   }
   &__grid {
-    display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr, 1fr;
+    padding: 15px 5px 8px 13px;
+    @media all and (min-width: 600px) {
+    }
+    @media all and (min-width: 768px) {
+    }
+    @media all and (min-width: 1366px) {
+      display: grid;
+      grid-template-columns: 1fr, 1fr, 1fr, 1fr, 1fr, 1fr;
+      grid-template-rows: 1fr, 1fr, 1fr;
+      padding: 15px 5px 8px 30px;
+      width: 900px;
+    }
+    @media all and (min-width: 1920px) {
+      padding: 15px 5px 8px 30px;
+    }
     &--layout {
       font-family: "Open Sans", sans-serif;
       font-size: 15px;
+      text-transform: uppercase;
       color: grey;
-      padding: 10px 0 5px 13px;
       @media all and (min-width: 600px) {
-        font-size: 18px;
+      }
+      @media all and (min-width: 768px) {
+      }
+      @media all and (min-width: 1366px) {
+        text-align: center;
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+      }
+      @media all and (min-width: 1920px) {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+      }
+    }
+    &--languages {
+      font-family: "Open Sans", sans-serif;
+      font-size: 15px;
+      text-transform: uppercase;
+      color: grey;
+      @media all and (min-width: 600px) {
+        //font-size: 18px;
         // padding: 2px 0 16px 18px;
       }
       @media all and (min-width: 768px) {
-        font-size: 18px;
+        //font-size: 18px;
         // padding: 2px 0 16px 30px;
+      }
+      @media all and (min-width: 1366px) {
+        text-align: center;
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+      }
+      @media all and (min-width: 1920px) {
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+      }
+    }
+    &--framework {
+      font-family: "Open Sans", sans-serif;
+      font-size: 15px;
+      text-transform: uppercase;
+      color: grey;
+      @media all and (min-width: 600px) {
+        //font-size: 18px;
+        // padding: 2px 0 16px 18px;
+      }
+      @media all and (min-width: 768px) {
+        //font-size: 18px;
+        // padding: 2px 0 16px 30px;
+      }
+      @media all and (min-width: 1366px) {
+        text-align: center;
+        grid-column: 5 / 6;
+        grid-row: 1 / 2;
+      }
+      @media all and (min-width: 1920px) {
+        grid-column: 5 / 6;
+        grid-row: 1 / 2;
+      }
+    }
+    &--version {
+      font-family: "Open Sans", sans-serif;
+      font-size: 15px;
+      text-transform: uppercase;
+      color: grey;
+      @media all and (min-width: 600px) {
+        //font-size: 18px;
+        // padding: 2px 0 16px 18px;
+      }
+      @media all and (min-width: 768px) {
+        //font-size: 18px;
+        // padding: 2px 0 16px 30px;
+      }
+      @media all and (min-width: 1366px) {
+        text-align: center;
+        grid-column: 6 / 7;
+        grid-row: 1 / 2;
+      }
+      @media all and (min-width: 1920px) {
+        grid-column: 6 / 7;
+        grid-row: 1 / 2;
       }
     }
     &--icons {
       display: inline-block;
-      font-size: 50px;
-      padding: 0 20px 10px 13px;
+      font-size: 40px;
+      padding: 10px;
       align-content: center;
+      text-align: center;
       @media all and (min-width: 600px) {
-        padding: 0 0 16px 18px;
+        //padding: 0 0 16px 18px;
       }
       @media all and (min-width: 768px) {
-        padding: 0 0 16px 30px;
+        // padding: 0 0 16px 30px;
       }
     }
   }
@@ -290,30 +390,48 @@
 .fa-html5 {
   color: rgb(255, 0, 0);
   grid-column: 1 / 2;
+  grid-row: 2 / 3;
 }
 .fa-css3-alt {
   color: rgb(24, 117, 238);
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 .fa-sass {
   color: rgb(238, 24, 113);
-}
-.fa-gulp {
-  color: rgb(212, 34, 72);
-}
-.fa-js-square {
-  color: rgb(251, 255, 0);
-}
-.fa-react {
-  color: rgb(0, 255, 242);
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
 }
 .fa-bootstrap {
   color: rgb(76, 0, 255);
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+.fa-js-square {
+  color: rgb(221, 224, 6);
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
 }
 .fa-node {
   color: rgb(54, 216, 39);
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+}
+.fa-gulp {
+  color: rgb(212, 34, 72);
+  grid-column: 3 / 5;
+  grid-row: 3 / 4;
+  text-align: center;
+}
+.fa-react {
+  color: rgb(0, 255, 242);
+  grid-column: 5 / 6;
+  grid-row: 2 / 3;
 }
 .fa-git-alt {
   color: rgb(255, 123, 0);
+  grid-column: 6 / 7;
+  grid-row: 2 / 3;
 }
 .about__wrapper {
   display: flex;
